resolve avatar block alignment issue

--- a/packages/react-native-bridge/common/gutenberg-web-single-block/wp-bar-override.css
+++ b/packages/react-native-bridge/common/gutenberg-web-single-block/wp-bar-override.css
@@ -1,11 +1,11 @@
 #wpbody {
-    padding-top: 0px;
+	padding-top: 0;
 }
 
 #wp-toolbar {
-    display: none;
+	display: none;
 }
 
 #wpadminbar {
-    display: none;
+	display: none;
 }
